--- a/server/views/login.html
+++ b/server/views/login.html
@@ -10,6 +10,9 @@
 <input type="file" id="sdk">
 <input type="button" id="btn" value="提交">
 <input type="button" id="change" value="保存">
+<div id="changeuser">
+    <input type="button" id="usernew" value="提交修改信息测试">
+</div>
 
 <div id="add"></div>
 <script>
@@ -36,7 +39,7 @@
     window.onload = function () {
         document.getElementById('users').innerText = getCookie("userName")+"|"+getCookie("userId");
     }
-
+//上传图片
     $('#btn').click(function () {
         var file = document.getElementById('sdk').files[0];
 
@@ -64,13 +67,13 @@
             })
         }
     })
-
+//加载图片
     function s() {
         var add =  document.createElement('div');
         add.innerHTML="<img src="+src+" alt='' >"
         document.getElementById('add').appendChild(add);
     }
-
+//修改图片
     $('#change').click(function () {
         var ll = {
             "userImg":src,
@@ -86,7 +89,32 @@
             }
         })
     })
-
+//修改信息
+    $('#usernew').click(function () {
+        var nesws = {
+//            "userId":"12345",
+//            "userName":"12345",
+//            "userPwd":"12345",
+//            "userNumber":"12345",
+//            "userImg":"12345",
+//            "userSex":"12345",
+//            "userAge":"12345",
+//            "userQQ":"12345",
+//            "userPhone":"12345"
+            "goodsType":"食品",
+            "goodsName":"冰可乐",
+            "goodsPrice":"10"
+        }
+        $.ajax({
+            url:'http://localhost/bin/ll/goods/addgoods',
+            type:'POST',
+            data:nesws,
+            dataType:"json",
+            success:function (data) {
+                alert("保存成功")
+            }
+        })
+    })
 </script>
 </body>
 </html>
